@@ -2,18 +2,28 @@
 # Changes of OTRS 
 # Copyright (C) 2002-2003 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: CHANGES,v 1.81 2003/05/19 15:08:21 martin Exp $
+# $Id: CHANGES,v 1.82 2003/05/25 22:56:30 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see 
 # the enclosed file COPYING for license information (GPL). If you 
 # did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
 # --
 CVS HEAD
+ - (2003/05/20) added array for source queue selection to bin/GenericAgent.pl
+    for example, use this job for more queues:
+    [...]
+    'move tickets from tricky to experts' => {
+      # get all tickets with this properties  
+      Queue => ['tricky', 'tricky1'],
+      States => ['new', 'open'],
+      Locks => ['unlock'],
+    [...]
  - (2003/05/13) removed UNIQUE (not needed!) in pop3_account table
 
 1.1.2 (2003-?-?) 
+ - (2003/05/26) fixed pic.pl bug - http://bugs.otrs.org/show_bug.cgi?id=149
  - (2003/05/19) improved text formatting of "long" messages in QueueView
-    and TicketZoom
+    TicketZoom, TicketPlain and TicketSearch
  - (2003/05/18) fixed small logic bugs in Kernel/System/PostMaster*
     improved debug options for bin/PostMaster.pl and bin/PostMasterPOP3.pl
      -=> just used -d1 (1-3) for debug level of Kernel/System/PostMaster*
